Allow pollerMode=3 when using custom default scheduler