@@ -21,18 +21,37 @@
  * questions.
  */
 
-/**
- * @test
+/*
+ * @test id=default
  * @summary Test using a custom scheduler as the default virtual thread scheduler
  * @requires vm.continuations
+ * @library /test/lib
  * @run junit/othervm -Djdk.virtualThreadScheduler.implClass=CustomDefaultScheduler$CustomScheduler1
  *     --enable-native-access=ALL-UNNAMED CustomDefaultScheduler
  * @run junit/othervm -Djdk.virtualThreadScheduler.implClass=CustomDefaultScheduler$CustomScheduler2
  *     --enable-native-access=ALL-UNNAMED CustomDefaultScheduler
  */
 
+/*
+ * @test id=poller-modes
+ * @requires vm.continuations
+ * @library /test/lib
+ * @run junit/othervm -Djdk.pollerMode=3
+ *     -Djdk.virtualThreadScheduler.implClass=CustomDefaultScheduler$CustomScheduler1
+ *     --enable-native-access=ALL-UNNAMED CustomDefaultScheduler
+ * @run junit/othervm -Djdk.pollerMode=3
+ *     -Djdk.virtualThreadScheduler.implClass=CustomDefaultScheduler$CustomScheduler2
+ *     --enable-native-access=ALL-UNNAMED CustomDefaultScheduler
+ */
+
+import java.io.Closeable;
+import java.io.IOException;
 import java.lang.Thread.VirtualThreadScheduler;
 import java.lang.Thread.VirtualThreadTask;
+import java.net.InetAddress;
+import java.net.InetSocketAddress;
+import java.net.ServerSocket;
+import java.net.Socket;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.Executors;
@@ -42,6 +61,8 @@ import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.concurrent.locks.LockSupport;
+
+import jdk.test.lib.thread.VThreadRunner;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.BeforeAll;
@@ -126,7 +147,7 @@ class CustomDefaultScheduler {
     }
 
     /**
-     * Test virtual thread park/unpark using custom default scheduler.
+     * Test virtual thread park/unpark when using custom default scheduler.
      */
     @Test
     void testPark() throws Exception {
@@ -146,10 +167,10 @@ class CustomDefaultScheduler {
     }
 
     /**
-     * Test virtual thread blocking on monitor when using custom default scheduler.
+     * Test virtual thread blocking on a monitor when using custom default scheduler.
      */
     @Test
-    void testBlock() throws Exception {
+    void testBlockMonitor() throws Exception {
         var ready = new CountDownLatch(1);
         var lock = new Object();
         var thread = Thread.ofVirtual().unstarted(() -> {
@@ -163,6 +184,28 @@ class CustomDefaultScheduler {
             await(thread, Thread.State.BLOCKED);
         }
         thread.join();
+    }
+
+    /**
+     * Test virtual thread blocking on a socket I/O when using custom default scheduler.
+     */
+    @Test
+    void testBlockSocket() throws Exception {
+        VThreadRunner.run(() -> {
+            try (var connection = new Connection()) {
+                Socket s1 = connection.socket1();
+                Socket s2 = connection.socket2();
+
+                // write bytes after current virtual thread has parked
+                byte[] ba1 = "XXX".getBytes("UTF-8");
+                runAfterParkedAsync(() -> s1.getOutputStream().write(ba1));
+
+                byte[] ba2 = new byte[10];
+                int n = s2.getInputStream().read(ba2);
+                assertTrue(n > 0);
+                assertTrue(ba2[0] == 'X');
+            }
+        });
     }
 
     /**
@@ -206,6 +249,72 @@ class CustomDefaultScheduler {
             assertTrue(state != Thread.State.TERMINATED, "Thread has terminated");
             Thread.sleep(10);
             state = thread.getState();
+        }
+    }
+
+    @FunctionalInterface
+    private interface ThrowingRunnable {
+        void run() throws Exception;
+    }
+
+    /**
+     * Runs the given task asynchronously after the current virtual thread has parked.
+     * @return the thread started to run the task
+     */
+    private static Thread runAfterParkedAsync(ThrowingRunnable task) {
+        Thread target = Thread.currentThread();
+        if (!target.isVirtual())
+            throw new WrongThreadException();
+        return Thread.ofPlatform().daemon().start(() -> {
+            try {
+                Thread.State state = target.getState();
+                while (state != Thread.State.WAITING
+                        && state != Thread.State.TIMED_WAITING) {
+                    Thread.sleep(20);
+                    state = target.getState();
+                }
+                Thread.sleep(20);  // give a bit more time to release carrier
+                task.run();
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        });
+    }
+
+    /**
+     * Creates a loopback connection
+     */
+    private static class Connection implements Closeable {
+        private final Socket s1;
+        private final Socket s2;
+        Connection() throws IOException {
+            var lh = InetAddress.getLoopbackAddress();
+            try (var listener = new ServerSocket()) {
+                listener.bind(new InetSocketAddress(lh, 0));
+                Socket s1 = new Socket();
+                Socket s2;
+                try {
+                    s1.connect(listener.getLocalSocketAddress());
+                    s2 = listener.accept();
+                } catch (IOException ioe) {
+                    s1.close();
+                    throw ioe;
+                }
+                this.s1 = s1;
+                this.s2 = s2;
+            }
+
+        }
+        Socket socket1() {
+            return s1;
+        }
+        Socket socket2() {
+            return s2;
+        }
+        @Override
+        public void close() throws IOException {
+            s1.close();
+            s2.close();
         }
     }
 }
